sketched out html structure

--- a/index.html
+++ b/index.html
@@ -8,5 +8,36 @@
     <script src="script.js"></script>
     <title>Bradleys Portfolio Site</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Bradleys Portfolio</h1>
+      <p>
+        <a href="index.html">Home</a>
+      </p>
+      <p>
+        <a href="#">Contact Me</a>
+      </p>
+      <p>
+        <a href="#">Projects</a>
+      </p>
+    </header>
+    <section class="about-me">
+      <div class="about-grid">
+        <!-- 4-columned grid for about me section -->
+      </div>
+    </section>
+    <section class="projects">
+      <div class="projects-grid">
+        <!-- grid displaying project cards section -->
+      </div>
+    </section>
+    <section class="contact-me">
+      <div class="contact">
+        <!-- contact me form -->
+      </div>
+    </section>
+    <footer>
+      <!-- social links and CV download icons -->
+    </footer>
+  </body>
 </html>
